--- a/v2/index.html
+++ b/v2/index.html
@@ -36,7 +36,7 @@
   <script>
     setTimeout(function() {
       // Redirect to the actual content of your website after the splash screen
-      window.location.href = "P inicial.html"; // Replace with your actual page
+      window.location.href = "login.html"; // Replace with your actual page
     }, 3000); // Adjust the delay as needed (in milliseconds)
   </script>
 
